--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.4.5",
     "classnames": "^2.5.1",
     "lucide-react": "^0.453.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
