--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@mui/system": "^6.1.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,20 +16,26 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.453.0",
     "mdb-react-ui-kit": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
