--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build": "react-scripts build",
     "start": "react-scripts start"
   },
   "eslintConfig": {
