--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=  https://encuesta-frontend.onrender.com/
+REACT_APP_BACKEND_URL=  https://encuesta-frontend.onrender.com/ 
+PORT = 8087
